--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1107,6 +1107,9 @@ map kitty_mod+left  previous_tab
 map cmd+shift+] next_tab
 map cmd+shift+[ previous_tab
 
+map ctrl+page_up   previous_tab
+map ctrl+page_down next_tab
+
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
