--- a/.xinputrc
+++ b/.xinputrc
@@ -1,7 +1,8 @@
 # im-config(8) generated on Mon, 09 Jul 2018 09:55:00 +0800
-run_im fcitx
-# im-config signature: 8554355653c38bebb240da254ee10e24  -
+#run_im fcitx
+run_im default
 
+# im-config signature: 8554355653c38bebb240da254ee10e24  -
 XIM=fcitx
 XIM_PROGRAM=/usr/bin/fcitx
 XIM_ARGS=""
